--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>TODO-APP</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./images/todo-icon.png" type="image/icon type" />
   </head>
   <body>
     <script src="../src/app.js"></script>
