--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
     <link rel="icon" href="./images/todo-icon.png" type="image/icon type" />
   </head>
   <body>
+    <div class="container">
+      <div class="header"></div>
+      <ul id="todo-list"></ul>
+      <div class="footer"></div>
+    </div>
     <script src="../src/app.js"></script>
   </body>
 </html>
