Added elements in header and style for header div

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,12 @@
   </head>
   <body>
     <div class="container">
-      <div class="header"></div>
+      <div class="header">
+        <h1>TODO LIST</h1>
+        <form id="search-form">
+          <input type="text" placeholder="Search..." />
+        </form>
+      </div>
       <ul id="todo-list"></ul>
       <div class="footer"></div>
     </div>
