Added 4 list-items in list as examples

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,24 @@
           <input type="text" placeholder="Search..." />
         </form>
       </div>
-      <ul id="todo-list"></ul>
+      <ul id="todo-list">
+        <li>
+          <span class="name">Buy milk</span>
+          <span class="delete">delete</span>
+        </li>
+        <li>
+          <span class="name">Buy bread</span>
+          <span class="delete">delete</span>
+        </li>
+        <li>
+          <span class="name">Pick up kids from school</span>
+          <span class="delete">delete</span>
+        </li>
+        <li>
+          <span class="name">Wash car</span>
+          <span class="delete">delete</span>
+        </li>
+      </ul>
       <div class="footer"></div>
     </div>
     <script src="../src/app.js"></script>
