Added form to footer div

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,12 @@
           <span class="delete">delete</span>
         </li>
       </ul>
-      <div class="footer"></div>
+      <div class="footer">
+        <form id="add-form">
+          <input type="text" / placeholder="Add new todo...">
+          <button type="submit">Add</button>
+        </form>
+      </div>
     </div>
     <script src="../src/app.js"></script>
   </body>
